<resources>
    <string name="app_name">DUI</string>
    <string name="app_desc">
        Welcome to DUI. This app will estimate your Blood Alcohol Level to inform
        you if it is safe to drive. To do this, you will perform 3 tasks that will test your reaction time,
        memory and balance. Based on your performance, you will be given 1 out of 3 possible results: safe,
        not safe or inconclusive. Note that this is only an estimate and is not a substitute for a real
        breathalyzer, so please be responsible.
    </string>
    <string name="begin">Begin</string>
    <string name="reaction_task_title">Reaction Task</string>
    <string name="reaction_task_desc">
        In this task, you will click on a target that will appear on the screen as fast as possible.
        You will have to do this 5 times, advancing every time you successfully hit the target.
        The position of the target, as well as the time it takes to appear,
        are generated randomly and will vary on each of the 5 times. Be aware that clicking outside
        of the target will negatively affect your performance.
    </string>
    <string name="memory_task_title">Memory Task</string>
    <string name="memory_task_desc">
        In this task, you will be shown a series of 5 randomly generated numbers between 0 and 9, with a 1 second interval
        between each. The phone will vibrate to signal each character that comes up.
        Afterwards, you will have to input the numbers in the same order they showed up.
        You will do this 3 times. Your performance will be negatively affected if you make mistakes or
        if you take too long to input the sequence.
    </string>
    <string name="input_text">Input Sequence</string>
    <string name="input_error">The sequence must contain 5 numbers.</string>
    <string name="walking_task_title">Walking Task</string>
    <string name="walking_task_desc">
        In this task, you will walk for 5 seconds with your phone
        in your hand in order to measure your balance. The phone should be placed in the palm of your hand,
        and your arm should be outstretched. The aim is to keep the phone as stable as
        possible while walking. Your performance will be negatively impacted if you do not manage to keep the phone stable.
        The phone will vibrate to signal the start and the end of the walking period.
    </string>
    <string name="start">Start</string>
    <string name="continue_text">Continue</string>
    <string name="submit">Submit</string>
    <string name="count_down">Task starts in </string>
    <string name="task_count_down"> seconds remaining</string>
    <string name="success">Task completed!</string>
    <string name="results_title">Results</string>
    <string name="incorrect_number">Incorrect numbers:</string>
    <string name="avg_decision_time">Average decision time:</string>
    <string name="avg_reaction_time">Average reaction time:</string>
    <string name="xaxis_text">X-Axis Variance:</string>
    <string name="yaxis_text">Y-Axis Variance:</string>
    <string name="misses_text">Number of misses:</string>
    <string name="degrees">degrees</string>
    <string name="seconds">seconds</string>
    <string name="safe">SAFE</string>
    <string name="unsafe">UNSAFE</string>
    <string name="inconc">INCONCLUSIVE</string>
</resources>
