<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp">

    <TextView
        android:id="@+id/text"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:scaleType="fitCenter"
        android:text="@string/walking_task_desc"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/prettyBlue"
        android:text="@string/start"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/prettyBlue"
        android:text="@string/continue_text"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        />


</LinearLayout>