<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/text"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:scaleType="fitCenter"
        android:text="@string/reaction_task_desc"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/prettyBlue"
        android:text="@string/start"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/prettyBlue"
        android:text="@string/continue_text"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        />

</LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/square"
            android:layout_width="300px"
            android:layout_height="300px"
            android:textColor="@color/black"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>